[Update] テスト終了

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,10 @@
+<% if flash[:notice] %>
+      <div class="flash">
+        <%= flash[:notice] %>
+      </div>
+<% end %>
+
+<p id="notice"></p>
 <h2>Title</h2>
 <p><%= @book.title %></p>
 
@@ -6,4 +13,4 @@
 
 <%= link_to "Edit", edit_book_path(@book.id) %>
 
-<%= link_to "Destroy", book_path(@book.id), method: :delete,  "data-confirm" => "Are you sure?" %>
+<%= link_to "Back", "/books" %>
