--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -5,25 +5,27 @@
   <thead>
     <tr>
       <th>Title</th>
-      <th>body</th>
+      <th>Body</th>
       <th colspan="3"></th>
     </tr>
   </thead>
   <tbody>
-  <% @books.each do |book| %>
+    <% @books.each do |book| %>
+    <tr>
+      <td><%= book.title %></td>
+      <td><%= book.body %></td>
+      <td>
+      　<%= link_to "Show", book_path(book.id), class: "#{book_path(book.id)}"  %>
+      </td>
+      <td>
+      　<%= link_to "Edit", edit_book_path(book.id), class: "#{edit_book_path(book.id)}"%>
+      </td>
+      <td>
+      　<%= link_to "Destroy", book_path(book.id), method: :delete,  "data-confirm" => "Are you sure?", class: "#{book_path(book.id)}"%>
+      </td>
+    <% end %>
   </tbody>
 </table>
-
-<span>
-  <%= link_to book.title, books_path(book.id) %>
-</span>
-
-<span><%= book.body %></span>
-
-<% end %>
-
-</table>
-
 
 
 <h2>New book</h2>
@@ -45,6 +47,5 @@
 
   <%= f.submit 'Create Book' %>
 <% end %>
-
 </body>
 
