--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,12 +22,16 @@
 }
 
 body {
-  background_color: #FFF;
+  background_color: #fff;
   color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
   margin: 33px;
+}
+
+#notice {
+  color: green;
 }
 
 h1 {
@@ -78,4 +82,52 @@ tr {
 
 th {
   padding-bottom: 5px;
+}
+
+a {
+  color: #000;
+}
+
+
+h2 {
+  display: block;
+  font-size: 1.5em;
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+}
+
+tbody {
+  display: table-header-group;
+  vertical-align: middle;
+  border-color: inherit;
+}
+
+td {
+  padding-bottom: 7px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+form {
+  display: block;
+  margin-top: 0em;
+}
+
+div.field, div.actions {
+  margin-bottom: 10px;
+}
+
+div {
+  display: block;
+}
+
+.action {
+  margin-bottom: 10px;
+}
+
+label {
+  display: block;
 }
