--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,3 +1,4 @@
+<body>
 <h1>Editing Book</h1>
 <% if @book.errors.any? %>
  <%= @book.errors.count %>errors prohibited this book from being saved:
@@ -8,18 +9,25 @@
  </ul>
 <% end %>
 
-<%= form_with model: @book do |f| %>
+<%= form_with model: @book, class:"edit_book" do |f| %>
+ <div class="field">
+  <label for="book_title">Title</label>
+ 　<%= f.text_field :title, class:"book_title" %>
+ </div>
 
- <h4>Title</h4>
- 　<%= f.text_field :title %>
+ <div class="field">
+  <label for="book_body">Body</label>
+ 　<%= f.text_area :body, class:"book_body" %>
+ </div>
 
-  <h4>Body</h4>
- 　<%= f.text_area :body %>
-
- 　<%= f.submit 'Update Book' %>
-
-<% end %>
+ <div class="actions">
+   <%= f.submit 'Update Book' %>
+   <% end %>
+ </div>
+</form>
 
 <%= link_to "Show", book_path(@book.id) %>
-
+|
 <%= link_to "Back", "/books" %>
+
+</body>
