--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -27,7 +27,6 @@
   </tbody>
 </table>
 
-
 <h2>New book</h2>
 <% if @book.errors.any? %>
  <%= @book.errors.count %>errors prohibited this book from being saved:
@@ -38,14 +37,21 @@
  </ul>
 <% end %>
 
-<%= form_with model: @book do |f| %>
-  <h4>Title</h4>
-  <%= f.text_field :title %>
+<%= form_with model: @book, class:"new_book" do |f| %>
+  <div class="field">
+    <label for="book_title">Title</label>
+    <%= f.text_field :title, class:"book_title" %>
+  </div>
 
-  <h4>Body</h4>
-  <%= f.text_field :body %>
+  <div class="field">
+    <label for="book_body">Body</label>
+  　<%= f.text_area :body, class:"book_body" %></textarea>
+  </div>
 
-  <%= f.submit 'Create Book' %>
-<% end %>
+  <div class="actions">
+    <%= f.submit 'Create Book' %>
+    <% end %>
+  </div>
+ </form>
 </body>
 
