--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,16 +1,24 @@
+<body>
+
 <% if flash[:notice] %>
-      <div class="flash">
+      <p id="notice">
         <%= flash[:notice] %>
-      </div>
+      </p>
 <% end %>
 
-<p id="notice"></p>
-<h2>Title</h2>
-<p><%= @book.title %></p>
+  <p id="notice"></p>
+ <p>
+  <strong>Title:</strong>
+   <%= @book.title %>
+ </p>
 
-<h2>Body</h2>
-<p><%= @book.body %></p>
+<p>
+  <strong>Body:</strong>
+   <%= @book.body %>
+</p>
 
 <%= link_to "Edit", edit_book_path(@book.id) %>
-
+ |
 <%= link_to "Back", "/books" %>
+
+</body>
